[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchain-openai = "^0.2.13"
pypdf = "^5.1.0"
chroma-hnswlib = "0.7.5"
pypdf2 = "^3.0.1"
pdfplumber = "^0.11.4"
flask = "2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
